fix team gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,6 @@ gap: 8px;
 
 .team-soc-list {
   gap: 24px;
-  margin-top: 8px;
 }
 
 .footer-soc-list {
